Changelog for Hearthstone (v1.1.2-SNAPSHOT)

2012-02-24 18:03:43 +0000    added HomeCommand (James Richardson)
2012-02-24 17:33:31 +0000    fix bug where successful set commands where dropping through to next if statement (James Richardson)
2012-02-24 17:21:00 +0000    fix bug where cooldown is always 5 minutes and in checking if it has expired (James Richardson)
2012-02-24 17:17:33 +0000    fixed another key missing exception (James Richardson)
2012-02-24 17:15:45 +0000    fixed missing key exceptions (James Richardson)
2012-02-24 06:38:58 +0000    implemented localisation upgraded to new version of bukkit-utilities (James Richardson)

v1.1.1
2012-02-16 03:22:20 +0000    fix issue where debugging was on by default (James Richardson)

v1.1.0
2012-02-16 03:14:52 +0000    formatting, add licence, preparing for release (James Richardson)
2012-02-16 03:07:19 +0000    preparing for release (James Richardson)
2012-02-16 02:02:16 +0000    big ugly commit (James Richardson)
2012-02-14 03:54:14 +0000    converted to use Maven (James Richardson)
2011-08-25 22:15:22 +0100    - Workaround for database locking exception when using MySQL (James Richardson)
2011-08-25 19:29:06 +0100    - initial commit (James Richardson)